fixed the alignment issues for jumio and landing page

--- a/ui/src/less/components/landing.less
+++ b/ui/src/less/components/landing.less
@@ -15,5 +15,13 @@ landing {
     li {
         line-height: 40px;
         list-style-type: none;
-    }   
+    }
+    @media only screen and (max-device-width: 480px) {
+        .landing_la {
+            width: 100% !important;
+        }
+    }
+    .landing_la {
+        width: 60%;
+    }       
 }
